# discord-bot-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: discord.rs  http-request.rs  http.rs  http_handler.rs  http_request.rs  main.rs  util.rs  websockets.rs
src/discord/: dispatch.rs  interface.rs  opcode.rs  payload.rs  snowflake.rs
src/discord/interface/: application.rs  channel.rs  emoji.rs  gateway.rs  guild.rs  message.rs  stage_instance.rs  user.rs  voice.rs
src/discord/interface/application/: application_flags.rs  membership_state.rs  team.rs
src/discord/interface/application/team/: team_member.rs
src/discord/interface/channel/: channel_type.rs  overwrite.rs  thread_member.rs  thread_metadata.rs  video_quality_mode.rs
src/discord/interface/gateway/: activity.rs  client_status.rs  presence_update.rs
src/discord/interface/guild/: default_message_notifications.rs  explicit_content_filter.rs  guild_feature.rs  mfa_level.rs  nsfw_level.rs  premium_tier.rs  system_channel_flags.rs  verification_level.rs  voice_state.rs  welcome_screen.rs  welcome_screen_channel.rs
src/discord/interface/message/: application.rs  attachment.rs  channel_mention.rs  channel_type.rs  embed.rs  emoji.rs  guild_member.rs  interaction.rs  message_activity.rs  message_component.rs  message_flags.rs  message_reference.rs  message_type.rs  reaction.rs  role.rs  sticker.rs
src/discord/interface/stage_instance/: privacy_level.rs
src/discord/interface/user/: premium_type.rs  user_flags.rs
src/websockets/: frame.rs  opcode.rs  socket.rs
(+12 files in other folders)
