[package]
name = "discord-bot-rust"
version = "0.1.0"
authors = ["SickanK <sixtenklementsson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
rand = "0.8.3"
native-tls = "0.2.7"
byteorder = "1.4.3"
serde_derive = "1.0.126"
config = "0.11.0"