[package]
name = "discord-bot-rust"
version = "0.1.0"
authors = ["SickanK <sixtenklementsson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
rand = "0.8.3"
native-tls = "0.2.7"
byteorder = "1.4.3"
serde_derive = "1.0.126"
config = "0.11.0"
strum = "0.21"
strum_macros = "0.21"
bitflags = "1.2.1"
num = "0.4.0"
num-traits = "0.2"
num-derive = "0.2"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = "0.11.3"
http = "0.2.4"
tokio = { version = "1.6.1", features = ["full"] }
futures = "0.3.15"